--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/image-rank-drag/image-rank-drag.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/image-rank-drag/image-rank-drag.component.html
@@ -500,8 +500,8 @@
                                 <ng-template #elseBlock>
                                     <div style="position: relative;">
                                         <mat-icon matRipple *ngFor="let star of  testName.STARS; let x =  index"
-                                        (click)="saveRate(y);setRating(star.id,y)"   (click)="checkAutosave(y)" [ngClass]="star.styleClass"
-                                            (mouseenter)="selectStar(star.id , y)" (mouseleave)="leaveStar(y)"
+                                        (click)="saveRate(y);setRating(star.id,y)"    [ngClass]="star.styleClass"
+                                            (mouseenter)="selectStar(star.id , y)" (mouseleave)="leaveStar(y)"(click)="checkAutosave(y)"
                                             style="outline: none;margin:1px -1px;cursor: pointer;">{{star.icon}}
                                         </mat-icon>
                                     </div>
