--- a/src/app/bmx/bmx-creator/bmx-creator.component.html
+++ b/src/app/bmx/bmx-creator/bmx-creator.component.html
@@ -7,7 +7,7 @@
   </button>
 
   <button class="no-print" *ngIf="isMenuActive11 || isMenuActive16"
-    style="position: absolute;bottom: 30px;z-index: 9999999999;right: 100px;outline: none;"
+    style="position: absolute;bottom: 30px;z-index: 9999999999;right: 100px;outline: none; display: none"
     (click)="toggleViewPageMode()" mat-icon-button matTooltip="design tools" matTooltipPosition="above">
     <mat-icon class="full-icon" style="font-size: 35px;">handyman
     </mat-icon>
