--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
@@ -87,9 +87,6 @@
     <!-- ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺  END  ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺ -->
 
     <div style="display: flex; flex-direction: row-reverse;">
-        <button (click)="showMatrixMenuBmx()" mat-icon-button matTooltip="{{textToolTip}}">
-            <mat-icon style="font-size: 26px;" class="full-icon">{{iconMenuShow}}</mat-icon>
-        </button>
         <div *ngIf="showMatrixMenu">
             <button (click)="undo(); editSingleTableCells = false" class="add-column" matTooltip="undo last change" matTooltipPosition="above"
                 mat-icon-button aria-label="ranking">
@@ -144,6 +141,10 @@
             *ngIf="i !== selectedIndex" mat-icon-button>
             <mat-icon style="font-size: 25px;" class="full-icon">edit</mat-icon>
         </button>
+        <button (click)="showMatrixMenuBmx()" mat-icon-button matTooltip="open menu"
+                matTooltipPosition="right">
+            <mat-icon class="full-icon">{{iconMenuShow}}</mat-icon>
+        </button> 
     </div>
 </div>
 <!-- ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗  END  ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗ -->
