--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.scss
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.scss
@@ -512,3 +512,219 @@ input[type="range"]:focus::-ms-fill-upper {
     }
   }
 }
+
+.modal-video {
+  /*display: block;  Hidden by default */
+  position: fixed; /* Stay in place */
+  top: 0%;
+  z-index: 999; /* Sit on top */
+
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: hidden; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgb(0 0 0 / 50%); /* Black w/ opacity */
+
+  /* Modal Content/Box */
+  .modal-content {
+      background-color: rgba(0, 0, 0, 0);
+      top: 0%;
+      margin: 2% auto; /* 15% from the top and centered */
+      // margin-left: 15%;
+      // padding: 20px;
+      // border: 1px solid #888;
+      width: 70%; /* Could be more or less, depending on screen size */
+      height: 70%;
+      overflow: scroll;
+      img {
+          margin-bottom: 15px;
+          height: auto;
+      }
+      img:last-child {
+          margin-bottom: 0;
+      }
+  }    
+
+  .close-modal {
+      // margin-bottom: 5px;
+      position: relative;
+  
+      // top: 12%;
+      left: 42.5%;
+      width: 15%;
+      padding: 0px 5px;
+      // margin-left: 36.5%;
+      color: #ffffff;
+      background-color: #ee7f24;
+      // float: right;
+      // font-size: 22px;
+      // font-weight: bold;
+      // text-align: center;
+      // height: 25px;
+      // border-radius: 5px;
+      transition: background-color 0.5s, color 0.5s;
+  }
+
+  .close-modal:hover,
+  .close-modal:focus {
+      background-color: #283e90;
+      color: white;
+      text-decoration: none;
+  }
+}
+/* escondemos el default checkbox */
+.modal-video input[type="checkbox"] {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: #e9ecef;
+  font-size: 18px;
+  text-align: center;
+  color: #e9ecef;
+}
+
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* mostramos el marcador al seleccionar */
+.container-checkbox input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* estilo del marcador */
+.container-checkboxr .checkmark:after {
+  left: 9px;
+  top: 5px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+//-------------modal-----------------//
+@media (min-width: 1025px) {
+  .modal-video .modal-content {
+      top: 10%;
+      margin: 1% auto;
+      margin-left: auto;
+      width: 55%;
+      // height: auto;
+      height: 50%;
+      overflow-y: scroll;
+      overflow-x: hidden;
+  }
+
+  .modal-video .close-modal {
+      // margin-left: 42.5%;
+      top: 12%;
+  }
+
+  .container-checkbox {
+      margin-left: 23%;
+      top: 12%;
+  }
+
+  .modal-content::-webkit-scrollbar {
+      width: 6px;
+  }
+
+  /* Track */
+  .modal-content::-webkit-scrollbar-track {
+      background: white;
+  }
+
+  /* Handle */
+  .modal-content::-webkit-scrollbar-thumb {
+      background: #283e90;
+      border-radius: 10px;
+  }
+
+  /* Handle on hover */
+  .modal-content::-webkit-scrollbar-thumb:hover {
+      background: #283e90;
+  }
+}
+
+//-------------modal mobil-----------------------//
+
+@media only screen and (min-width: 993px) and (max-width: 1024px) {
+  .modal-video .modal-content {
+      top: 3%;
+      margin: 1% auto;
+      margin-left: auto;
+      width: 30%;
+      height: 75%;
+      overflow: scroll;
+  }
+
+  .container-checkbox {
+      margin-left: 35%;
+      top: 3%;
+  }
+
+  .modal-video .close-modal {
+      position: relative;
+      // margin-left: 42.5%;
+      top: 5%;
+  }
+}
+
+@media only screen and (min-width: 769px) and (max-width: 992px) {
+  .modal-video .modal-content {
+      top: 4%;
+      margin: 1% auto;
+      margin-left: auto;
+      width: 30%;
+      height: 75%;
+      overflow: scroll;
+  }
+
+  .container-checkbox {
+      margin-left: 35%;
+      top: 5%;
+  }
+
+  .modal-video .close-modal {
+      position: relative;
+      // margin-left: 42.5%;
+      top: 5%;
+  }
+}
+
+@media only screen and (min-width: 576px) and (max-width: 768px) {
+  .modal-video .modal-content {
+      top: 4%;
+      margin: 1% auto;
+      margin-left: auto;
+      width: 40%;
+      height: 75%;
+      overflow: scroll;
+  }
+
+  .container-checkbox {
+      margin-left: 30%;
+      top: 6%;
+  }
+
+  .modal-video .close-modal {
+      position: relative;
+      // margin-left: 42.5%;
+      top: 5%;
+  }
+}
