--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/narrow-down/narrow-down.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/narrow-down/narrow-down.component.html
@@ -1,3 +1,15 @@
+<div *ngIf="showModalVideo && bmxClientPageOverview" id="myModal" class="modal-video"
+    style="display: flex;flex-direction: column;gap: 2px;">
+    <!-- <label class="container-checkbox">Don't show again
+        <input (click)="saveSelection()" type="checkbox" value="Bike" #modalChecked> 
+        <span class="checkmark">&#x2714;</span>        
+    </label> -->
+    <div class="modal-content">
+        <video src='{{VIDEO_PATH}}' controls></video>
+
+    </div>
+    <button class="btn btn-raised close-modal" (click)="showModalVideo=false">close</button>
+</div>
 <!-- ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗  SETTINGS ICONS  ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗ -->
 <div *ngIf="bmxClientPageOverview" style="display: flex;
     flex-direction: row-reverse;
@@ -91,48 +103,55 @@
             <mat-icon style="font-size: 26px;" class="full-icon">{{iconMenuShow}}</mat-icon>
         </button>
         <div *ngIf="showMatrixMenu">
-            <button (click)="undo(); editSingleTableCells = false" class="add-column" matTooltip="undo last change" matTooltipPosition="above"
-            mat-icon-button aria-label="ranking">
-            <mat-icon style="font-size: 26px;" class="full-icon">undo</mat-icon>
-        </button>
-        <button (click)="selectedIndex = ''; editSingleTableCells = false" class="add-column" matTooltip="cancel" matTooltipPosition="above"
-            *ngIf="i === selectedIndex" mat-icon-button>
-            <mat-icon style="font-size: 25px;" class="full-icon">check_circle</mat-icon>
-        </button>
-        <button (click)="deleteRows = !deleteRows; editSingleTableCells = false" [ngClass]="(!deleteRows)?'add-column':'add-column-active'"
-            matTooltip="delete rows" matTooltipPosition="above" mat-icon-button aria-label="ranking">
-            <mat-icon style="font-size: 26px;" class="full-icon">delete_outline</mat-icon>
-        </button>
-        <button (click)="setPronunciation(); editSingleTableCells = false" class="add-column" matTooltip="speech" matTooltipPosition="above"
-            mat-icon-button aria-label="ranking">
-            <mat-icon style="font-size: 26px;" class="full-icon">mic</mat-icon>
-        </button>
-        <button (click)="insertTextColumn(); editSingleTableCells = false" class="add-column" matTooltip="add text column" matTooltipPosition="above"
-            mat-icon-button aria-label="ranking">
-            <mat-icon style="font-size: 26px;" class="full-icon">view_list</mat-icon>
-        </button>
-        <!-- <button (click)="insertRadioColumn()" class="add-column"  matTooltip="add radio column"
+            <button (click)="undo(); editSingleTableCells = false" class="add-column" matTooltip="undo last change"
+                matTooltipPosition="above" mat-icon-button aria-label="ranking">
+                <mat-icon style="font-size: 26px;" class="full-icon">undo</mat-icon>
+            </button>
+            <button (click)="selectedIndex = ''; editSingleTableCells = false" class="add-column" matTooltip="cancel"
+                matTooltipPosition="above" *ngIf="i === selectedIndex" mat-icon-button>
+                <mat-icon style="font-size: 25px;" class="full-icon">check_circle</mat-icon>
+            </button>
+            <button (click)="deleteRows = !deleteRows; editSingleTableCells = false"
+                [ngClass]="(!deleteRows)?'add-column':'add-column-active'" matTooltip="delete rows"
+                matTooltipPosition="above" mat-icon-button aria-label="ranking">
+                <mat-icon style="font-size: 26px;" class="full-icon">delete_outline</mat-icon>
+            </button>
+            <button (click)="setPronunciation(); editSingleTableCells = false" class="add-column" matTooltip="speech"
+                matTooltipPosition="above" mat-icon-button aria-label="ranking">
+                <mat-icon style="font-size: 26px;" class="full-icon">mic</mat-icon>
+            </button>
+            <button (click)="insertTextColumn(); editSingleTableCells = false" class="add-column"
+                matTooltip="add text column" matTooltipPosition="above" mat-icon-button aria-label="ranking">
+                <mat-icon style="font-size: 26px;" class="full-icon">view_list</mat-icon>
+            </button>
+            <!-- <button (click)="insertRadioColumn()" class="add-column"  matTooltip="add radio column"
             matTooltipPosition="above" mat-icon-button aria-label="ranking">
             <mat-icon style="font-size: 26px;" class="full-icon">radio_button_checked</mat-icon>
         </button> -->
+
+            <button (click)="insertRow(); editSingleTableCells = false" class="add-column" matTooltip="insert row"
+                matTooltipPosition="above" mat-icon-button aria-label="ranking">
+                <mat-icon style="font-size: 26px;" class="full-icon">vertical_distribute</mat-icon>
+            </button>
+            <button (click)="dragRows = !dragRows; editSingleTableCells = false"
+                [ngClass]="(!dragRows)?'add-column':'add-column-active'" matTooltip="drag rows"
+                matTooltipPosition="above" mat-icon-button aria-label="ranking">
+                <mat-icon style="font-size: 26px;" class="full-icon">drag_indicator</mat-icon>
+            </button>
+
+            <button (click)="editSingleTableCells = !editSingleTableCells"
+                [ngClass]="(!editSingleTableCells)?'add-column':'add-column-active'" matTooltip="edit table cells"
+                matTooltipPosition="above" mat-icon-button aria-label="ranking">
+                <mat-icon style="font-size: 26px;" class="full-icon">explicit</mat-icon>
+            </button>
+        </div>
+        <button (click)="showModalVideo=true; editSingleTableCells = false" class="add-column" matTooltip="see tutorial"
+                matTooltipPosition="above" mat-icon-button aria-label="ranking">
+                <mat-icon style="font-size: 26px;" class="full-icon">video_library</mat-icon>
+        </button>
         
-        <button (click)="insertRow(); editSingleTableCells = false" class="add-column" matTooltip="insert row" matTooltipPosition="above"
-            mat-icon-button aria-label="ranking">
-            <mat-icon style="font-size: 26px;" class="full-icon">vertical_distribute</mat-icon>
-        </button>
-        <button (click)="dragRows = !dragRows; editSingleTableCells = false" [ngClass]="(!dragRows)?'add-column':'add-column-active'"
-            matTooltip="drag rows" matTooltipPosition="above" mat-icon-button aria-label="ranking">
-            <mat-icon style="font-size: 26px;" class="full-icon">drag_indicator</mat-icon>
-        </button>
-        
-        <button (click)="editSingleTableCells = !editSingleTableCells"
-            [ngClass]="(!editSingleTableCells)?'add-column':'add-column-active'" matTooltip="edit table cells"
-            matTooltipPosition="above" mat-icon-button aria-label="ranking">
-            <mat-icon style="font-size: 26px;" class="full-icon">explicit</mat-icon>
-        </button>
-        </div>        
-        <button (click)="insertCommentBoxColumn(); editSingleTableCells = false" class="add-column" matTooltip="add comments column"
-            matTooltipPosition="above" mat-icon-button aria-label="ranking">
+        <button (click)="insertCommentBoxColumn(); editSingleTableCells = false" class="add-column"
+            matTooltip="add comments column" matTooltipPosition="above" mat-icon-button aria-label="ranking">
             <mat-icon style="font-size: 26px;" class="full-icon">wysiwyg</mat-icon>
         </button>
 
@@ -141,11 +160,11 @@
             matTooltipPosition="above" mat-icon-button aria-label="ranking">
             <mat-icon style="font-size: 26px;    z-index: 9;" class="full-icon">swap_horizontal_circle</mat-icon>
         </button>
-        <button (click)="selectedIndex = i; editSingleTableCells = false" class="add-column" matTooltip="insert test names" matTooltipPosition="above"
-            *ngIf="i !== selectedIndex" mat-icon-button>
+        <button (click)="selectedIndex = i; editSingleTableCells = false" class="add-column"
+            matTooltip="insert test names" matTooltipPosition="above" *ngIf="i !== selectedIndex" mat-icon-button>
             <mat-icon style="font-size: 25px;" class="full-icon">edit</mat-icon>
         </button>
-     
+
     </div>
 </div>
 <!-- ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗  END  ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗ -->
@@ -240,7 +259,8 @@
             <br>
 
             <div style="text-align: center;display: flex;flex-direction: row;justify-content: space-around;">
-                {{numRatingScale}} <input [(ngModel)]="rankingScaleValue" type="range" id="volume" name="volume" min="3" max="10">
+                {{numRatingScale}} <input [(ngModel)]="rankingScaleValue" type="range" id="volume" name="volume" min="3"
+                    max="10">
                 10 <br>
             </div>
             <label for="volume">{{rankingScaleValue}}</label>
@@ -475,23 +495,24 @@
                             style="outline: none;text-align: center;" class="row-box"
                             [(ngModel)]="testName[columnName]"></textarea>
 
-                            
 
-                            <div style="display: flex;">
-                                <mat-icon style="cursor: pointer;color: #324395;" (click)="playTestNameSound(testName[columnName])"
-                                    *ngIf="y !== 0  && !editSingleTableCells && (columnName.includes('nameCandidates') == true) && displaySound">
-                                    volume_up
-                                </mat-icon>
-                                <p *ngIf="y !== 0  && !editSingleTableCells && (columnName.includes('RadioColumn') != true) &&
+
+                        <div style="display: flex;">
+                            <mat-icon style="cursor: pointer;color: #324395;"
+                                (click)="playTestNameSound(testName[columnName])"
+                                *ngIf="y !== 0  && !editSingleTableCells && (columnName.includes('nameCandidates') == true) && displaySound">
+                                volume_up
+                            </mat-icon>
+                            <p *ngIf="y !== 0  && !editSingleTableCells && (columnName.includes('RadioColumn') != true) &&
                                 columnName.includes('Comments') != true &&  columnName.includes('RATE') != true"
-                                   [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'"
-                                   [style.width]="(columnName == 'rationale')?bmxItem.componentSettings[0].rationalewidth + 'px':bmxItem.componentSettings[0].columnWidth +'px'"
-                                   style="text-align: center;margin: 0 0 0px;"
-                                   [innerHTML]="testName[columnName] | safe: 'html'">{{testName[columnName]}}</p>
-                            </div>
+                                [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'"
+                                [style.width]="(columnName == 'rationale')?bmxItem.componentSettings[0].rationalewidth + 'px':bmxItem.componentSettings[0].columnWidth +'px'"
+                                style="text-align: center;margin: 0 0 0px;"
+                                [innerHTML]="testName[columnName] | safe: 'html'">{{testName[columnName]}}</p>
+                        </div>
 
 
-                       
+
                     </div>
                     <!-- 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 END TABLE CELLS 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 -->
                 </div>
@@ -589,8 +610,7 @@
                                         [style.width]="'95%'"
                                         [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'"
                                         cdkTextareaAutosize
-                                        [cdkAutosizeMinRows]="bmxItem.componentSettings[0].rowHeight"
-                                         style="text-align: center;min-height: 32px;width: 358px;font-size: 16px;border: 1px solid grey;
+                                        [cdkAutosizeMinRows]="bmxItem.componentSettings[0].rowHeight" style="text-align: center;min-height: 32px;width: 358px;font-size: 16px;border: 1px solid grey;
                                                 animation: bounceIn 500ms ease-in forwards;padding: 0 4px"
                                         class="row-box" [(ngModel)]="testName[columnName]" placeholder="comments"
                                         rows="4" cols="50"></textarea>
@@ -612,8 +632,8 @@
                                         [style.color]="(columnName.includes('name') == true)?'#324395':'#bababa'"
                                         style="text-align: center;padding: 10px 4px;">{{(testName[columnName])}}</p>
                                 </div>
-        
-        
+
+
                                 <p *ngIf="y !== 0  && !editSingleTableCells && (columnName.includes('RadioColumn') != true) &&
                                       columnName.includes('Comments') != true && selectedCard == y  &&  columnName.includes('RATE') != true &&
                                       columnName.includes('name') != true"
