--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/tinder/tinder.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/tinder/tinder.component.html
@@ -1,3 +1,15 @@
+<div *ngIf="showModalVideo && bmxClientPageOverview" id="myModal" class="modal-video"
+    style="display: flex;flex-direction: column;gap: 2px;">
+    <!-- <label class="container-checkbox">Don't show again
+        <input (click)="saveSelection()" type="checkbox" value="Bike" #modalChecked> 
+        <span class="checkmark">&#x2714;</span>        
+    </label> -->
+    <div class="modal-content">
+        <video src='{{VIDEO_PATH}}' controls></video>
+
+    </div>
+    <button class="btn btn-raised close-modal" (click)="showModalVideo=false">close</button>
+</div>
 <!-- ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗  SETTINGS ICONS  ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗ -->
 <div *ngIf="bmxClientPageOverview" style="display: flex;
     flex-direction: row-reverse;
@@ -34,6 +46,10 @@
         <button (click)="showModalTable = true" class="add-column" matTooltip="Update names" matTooltipPosition="above"
             *ngIf="i !== selectedIndex" mat-icon-button>
             <mat-icon style="font-size: 25px;" class="full-icon"> text_fields</mat-icon>
+        </button>
+        <button (click)="showModalVideo=true; editSingleTableCells = false" class="add-column" matTooltip="see tutorial"
+            matTooltipPosition="above" mat-icon-button aria-label="ranking">
+            <mat-icon style="font-size: 26px;" class="full-icon">video_library</mat-icon>
         </button>
         <button (click)="selectedIndex = i" class="add-column" matTooltip="insert test names" matTooltipPosition="above"
             *ngIf="i !== selectedIndex" mat-icon-button>
@@ -176,7 +192,8 @@
                 </div>
 
                 <!-- RANKING SYSTEM -->
-                <div *ngIf="ranking" style="display: flex;flex-direction:row;justify-content: center;align-items: center;gap: 35px;">
+                <div *ngIf="ranking"
+                    style="display: flex;flex-direction:row;justify-content: center;align-items: center;gap: 35px;">
                     <div *ngFor="let rank of rankingAmountArr; let rankIndex = index">
                         <button style="min-width: 35px;" (click)="voteName(rank)"
                             [ngClass]="(currentrank === rankIndex)?'rankNumberActive':'rankNumber'" mat-raised-button>
@@ -303,7 +320,7 @@
                         </ng-template>
                     </div>
                     <div style="display: flex; gap: 5px">
-                       <div *ngFor="let rank of rankingAmountArr; let rankIndex = index">
+                        <div *ngFor="let rank of rankingAmountArr; let rankIndex = index">
                             <button style="min-width: 35px;" (click)="voteName(rank)"
                                 [ngClass]="(currentrank === rankIndex)?'rankNumberActive':'rankNumber'"
                                 mat-raised-button>
