--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
@@ -1,3 +1,15 @@
+<div *ngIf="showModalVideo && bmxClientPageOverview" id="myModal" class="modal-video"
+    style="display: flex;flex-direction: column;gap: 2px;">
+    <!-- <label class="container-checkbox">Don't show again
+        <input (click)="saveSelection()" type="checkbox" value="Bike" #modalChecked>
+        <span class="checkmark">&#x2714;</span>
+    </label> -->
+    <div class="modal-content">
+        <video src='{{VIDEO_PATH}}' controls></video>
+
+    </div>
+    <button class="btn btn-raised close-modal" (click)="showModalVideo=false">close</button>
+</div>
 <!-- ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗  SETTINGS ICONS  ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗ -->
 <div *ngIf="bmxClientPageOverview" style="display: flex;
     flex-direction: row-reverse;
@@ -87,38 +99,44 @@
     <!-- ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺  END  ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺ -->
 
     <div style="display: flex; flex-direction: row-reverse;">
+        <button (click)="showMatrixMenuBmx()" mat-icon-button matTooltip="{{textToolTip}}"
+            matTooltipPosition="right">
+            <mat-icon class="full-icon">{{iconMenuShow}}</mat-icon>
+        </button>
         <div *ngIf="showMatrixMenu">
-            <button (click)="undo(); editSingleTableCells = false" class="add-column" matTooltip="undo last change" matTooltipPosition="above"
-                mat-icon-button aria-label="ranking">
+            <button (click)="undo(); editSingleTableCells = false" class="add-column" matTooltip="undo last change"
+                matTooltipPosition="above" mat-icon-button aria-label="ranking">
                 <mat-icon style="font-size: 26px;" class="full-icon">undo</mat-icon>
-            </button> 
-            <button (click)="selectedIndex = ''; editSingleTableCells = false" class="add-column" matTooltip="cancel" matTooltipPosition="above"
-                *ngIf="i === selectedIndex" mat-icon-button>
+            </button>
+            <button (click)="selectedIndex = ''; editSingleTableCells = false" class="add-column" matTooltip="cancel"
+                matTooltipPosition="above" *ngIf="i === selectedIndex" mat-icon-button>
                 <mat-icon style="font-size: 25px;" class="full-icon">check_circle</mat-icon>
             </button>
-            <button (click)="deleteRows = !deleteRows; editSingleTableCells = false" [ngClass]="(!deleteRows)?'add-column':'add-column-active'"
-                matTooltip="delete rows" matTooltipPosition="above" mat-icon-button aria-label="ranking">
+            <button (click)="deleteRows = !deleteRows; editSingleTableCells = false"
+                [ngClass]="(!deleteRows)?'add-column':'add-column-active'" matTooltip="delete rows"
+                matTooltipPosition="above" mat-icon-button aria-label="ranking">
                 <mat-icon style="font-size: 26px;" class="full-icon">delete_outline</mat-icon>
             </button>
-            <button (click)="setPronunciation(); editSingleTableCells = false" class="add-column" matTooltip="speech" matTooltipPosition="above"
-                mat-icon-button aria-label="ranking">
+            <button (click)="setPronunciation(); editSingleTableCells = false" class="add-column" matTooltip="speech"
+                matTooltipPosition="above" mat-icon-button aria-label="ranking">
                 <mat-icon style="font-size: 26px;" class="full-icon">mic</mat-icon>
             </button>
-            <button (click)="insertTextColumn(); editSingleTableCells = false" class="add-column" matTooltip="add text column" matTooltipPosition="above"
-                mat-icon-button aria-label="ranking">
+            <button (click)="insertTextColumn(); editSingleTableCells = false" class="add-column"
+                matTooltip="add text column" matTooltipPosition="above" mat-icon-button aria-label="ranking">
                 <mat-icon style="font-size: 26px;" class="full-icon">view_list</mat-icon>
             </button>
-            <button (click)="insertRadioColumn(); editSingleTableCells = false" class="add-column" matTooltip="add radio column"
-                matTooltipPosition="above" mat-icon-button aria-label="ranking">
+            <button (click)="insertRadioColumn(); editSingleTableCells = false" class="add-column"
+                matTooltip="add radio column" matTooltipPosition="above" mat-icon-button aria-label="ranking">
                 <mat-icon style="font-size: 26px;" class="full-icon">radio_button_checked</mat-icon>
             </button>
-        
-            <button (click)="insertRow(); editSingleTableCells = false" class="add-column" matTooltip="insert row" matTooltipPosition="above"
-                mat-icon-button aria-label="ranking">
+
+            <button (click)="insertRow(); editSingleTableCells = false" class="add-column" matTooltip="insert row"
+                matTooltipPosition="above" mat-icon-button aria-label="ranking">
                 <mat-icon style="font-size: 26px;" class="full-icon">vertical_distribute</mat-icon>
             </button>
-            <button (click)="dragRows = !dragRows; editSingleTableCells = false" [ngClass]="(!dragRows)?'add-column':'add-column-active'"
-                matTooltip="drag rows" matTooltipPosition="above" mat-icon-button aria-label="ranking">
+            <button (click)="dragRows = !dragRows; editSingleTableCells = false"
+                [ngClass]="(!dragRows)?'add-column':'add-column-active'" matTooltip="drag rows"
+                matTooltipPosition="above" mat-icon-button aria-label="ranking">
                 <mat-icon style="font-size: 26px;" class="full-icon">drag_indicator</mat-icon>
             </button>
             <button (click)="editSingleTableCells = !editSingleTableCells"
@@ -127,9 +145,13 @@
                 <mat-icon style="font-size: 26px;" class="full-icon">explicit</mat-icon>
             </button>
         </div>
-        
-        <button (click)="insertCommentBoxColumn(); editSingleTableCells = false" class="add-column" matTooltip="add comments column"
+        <button (click)="showModalVideo=true; editSingleTableCells = false" class="add-column" matTooltip="see tutorial"
             matTooltipPosition="above" mat-icon-button aria-label="ranking">
+            <mat-icon style="font-size: 26px;" class="full-icon">video_library</mat-icon>
+        </button>
+
+        <button (click)="insertCommentBoxColumn(); editSingleTableCells = false" class="add-column"
+            matTooltip="add comments column" matTooltipPosition="above" mat-icon-button aria-label="ranking">
             <mat-icon style="font-size: 26px;" class="full-icon">wysiwyg</mat-icon>
         </button>
         <button (click)="isColumnResizerOn = !isColumnResizerOn; editSingleTableCells = false"
@@ -137,14 +159,10 @@
             matTooltipPosition="above" mat-icon-button aria-label="ranking">
             <mat-icon style="font-size: 26px;    z-index: 9;" class="full-icon">swap_horizontal_circle</mat-icon>
         </button>
-        <button (click)="selectedIndex = i; editSingleTableCells = false" class="add-column" matTooltip="insert test names" matTooltipPosition="above"
-            *ngIf="i !== selectedIndex" mat-icon-button>
+        <button (click)="selectedIndex = i; editSingleTableCells = false" class="add-column"
+            matTooltip="insert test names" matTooltipPosition="above" *ngIf="i !== selectedIndex" mat-icon-button>
             <mat-icon style="font-size: 25px;" class="full-icon">edit</mat-icon>
         </button>
-        <button (click)="showMatrixMenuBmx()" mat-icon-button matTooltip="open menu"
-                matTooltipPosition="right">
-            <mat-icon class="full-icon">{{iconMenuShow}}</mat-icon>
-        </button> 
     </div>
 </div>
 <!-- ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗  END  ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗ -->
@@ -169,8 +187,7 @@
     <div>
         <mat-form-field style="width: 90%;margin-left: 20px;" appearance="outline">
             <mat-label>Copy & Paste TEST NAMES</mat-label>
-            <textarea matInput rows="4" cols="50" [(ngModel)]="testNamesInput"
-                placeholder=""></textarea>
+            <textarea matInput rows="4" cols="50" [(ngModel)]="testNamesInput" placeholder=""></textarea>
         </mat-form-field>
     </div>
 
@@ -308,7 +325,7 @@
 
 
                         <!--☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️ DRAG AND DROP ☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️-->
-                        <button *ngIf="this.bmxItem.componentSettings[0].rankType == 'dragAndDrop'" mat-button style="background-color:#ee7f25 ;color: white; 
+                        <button *ngIf="this.bmxItem.componentSettings[0].rankType == 'dragAndDrop'" mat-button style="background-color:#ee7f25 ;color: white;
                             animation: rubberBand 700ms ease-in  forwards;">{{y}}</button>
 
 
@@ -321,8 +338,8 @@
 
                         <!-- 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 RATE BUTTONS 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 -->
                         <div style="display: flex;">
-                            <button (click)="bmxItem.componentText[y]['RATE'] = 0;leaveStar(y)" *ngIf="bmxItem.componentText[y]['RATE']>0 && y != 0 && 
-                                this.bmxItem.componentSettings[0].rankType == 'dropDown'" style="background-color: #ee7f25;    
+                            <button (click)="bmxItem.componentText[y]['RATE'] = 0;leaveStar(y)" *ngIf="bmxItem.componentText[y]['RATE']>0 && y != 0 &&
+                                this.bmxItem.componentSettings[0].rankType == 'dropDown'" style="background-color: #ee7f25;
                                     color: white;
                                     min-width: 20px;
                                     line-height: 19px;
@@ -339,15 +356,17 @@
                         [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'"
                         style="text-align: center; font-weight: bold;color: #324395;min-width: 200px;" class="row-box"
                         [(ngModel)]="bmxItem.componentSettings[0].ratingScaleTitle"
-                        value="bmxItem.componentSettings[0].ratingScaleTitle"></textarea>
+                        value="bmxItem.componentSettings[0].ratingScaleTitle">
+                    </textarea>
                     <div class="rating-text" *ngIf="y == 0 && !editSingleTableCells">
-                        {{bmxItem.componentSettings[0].ratingScaleTitle}}</div>
+                        {{bmxItem.componentSettings[0].ratingScaleTitle}}
+                    </div>
                 </div>
                 <!--⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ RANK STARS ⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ -->
 
                 <div *ngFor="let columnName of columnsNames; let e =  index"
                     style="display: flex;align-items: center;justify-content: center;" [ngClass]="(e%2==0)?'red':'blue'"
-                    [style.padding]="bmxItem.componentSettings[0].rowHeight + 'px'" [style.width]="(columnName == 'rationale')?bmxItem.componentSettings[0].rationalewidth + 'px': 
+                    [style.padding]="bmxItem.componentSettings[0].rowHeight + 'px'" [style.width]="(columnName == 'rationale')?bmxItem.componentSettings[0].rationalewidth + 'px':
                     (columnName == 'RATE')?bmxItem.componentSettings[0].rateWidth + 'px':
                     (columnName == 'nameCandidates')?bmxItem.componentSettings[0].nameCandidatesWidth + 'px':
                     (columnName.includes('Comments'))?bmxItem.componentSettings[0].commentsWidth + 'px':
@@ -369,7 +388,7 @@
                             </p>
                         </div>
                         <div *ngIf="selectedColumn === e && bmxClientPageOverview && !editSingleTableCells" style="display: flex;flex-direction: row;justify-content: space-around;
-                        position: absolute;top: 35px;background: white;border: #324395 dashed 1px;"
+                            position: absolute;top: 35px;background: white;border: #324395 dashed 1px;"
                             (mouseleave)="selectedColumn = ''">
                             <span class="header-delete-icon" matTooltip="double click to delete column"
                                 matTooltipPosition="above" (dblclick)="deleteColumn(columnName)">x</span>
@@ -435,11 +454,10 @@
                             <p *ngIf="y !== 0  && !editSingleTableCells && (columnName.includes('RadioColumn') != true)
                                     &&  columnName.includes('Comments') != true &&  columnName.includes('RATE') != true"
                                 [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'"
-                                [style.width]="(columnName == 'rationale')?bmxItem.componentSettings[0].rationalewidth + 'px':bmxItem.componentSettings[0].columnWidth +'px'"
-                                style="text-align: center;margin: 0 0 0px;padding: 4px;"
+                                [style.width]="(columnName == 'rationale')?bmxItem.componentSettings[0].rationalewidth + 'px':(columnName == 'nameCandidates')?100 +'%':bmxItem.componentSettings[0].rationalewidth + 'px'"
+                                style="text-align: center;margin: 0 0 0px;padding: 4px"
                                 [innerHTML]="testName[columnName] | safe: 'html'">{{testName[columnName]}}
                             </p>
-
                         </div>
                     </div>
                     <!-- 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 END TABLE CELLS 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 -->
@@ -507,7 +525,7 @@
 
                 <div style="display: flex;gap: 23px;padding-top: 10px;position: absolute;right: 24px;">
                     <div *ngFor="let criteria of testName.CRITERIA  let x =  index">
-                        <button *ngIf="criteria.RATE>0 && y != 0 " style="background-color: #ee7f25;    
+                        <button *ngIf="criteria.RATE>0 && y != 0 " style="background-color: #ee7f25;
                              color: white;
                              min-width: 20px;
                              line-height: 20px;
