Fix tinder tutorial image

--- a/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.html
+++ b/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.html
@@ -123,7 +123,7 @@
                         </mat-icon>
                     </button>
                     <!-- modal -->
-                    <!-- <div *ngIf="showModalVideo" id="myModal" class="modal-video"> CV
+                   <div *ngIf="showModalVideo" id="myModal" class="modal-video"> CV
                         
                         <mat-checkbox (click)="saveSelection()" class="example-margin container-checkbox" >Don't show again</mat-checkbox>
                     
@@ -131,7 +131,7 @@
                             <img *ngFor="let path of VIDEO_PATH" [src]="path" alt="Girl in a jacket">
                         </div>
                         <button class="close-modal" (click)="showModalVideo=false">Close</button>
-                    </div> -->
+                    </div> 
                     <!-- modal end -->                   
 
                     <app-image-rank-drag [bmxItem]="bmxItem" [i]="i" [bmxClientPageDesignMode]="bmxClientPageDesignMode"
@@ -155,7 +155,7 @@
                         </mat-icon>
                     </button>
                     <!-- modal -->
-                    <!-- <div *ngIf="showModalVideo" id="myModal" class="modal-video" CV
+                   <div *ngIf="showModalVideo" id="myModal" class="modal-video" CV
                     style="display: flex;flex-direction: column;gap: 6px;">
                         <mat-checkbox (click)="saveSelection()" class="example-margin container-checkbox" >Don't show again</mat-checkbox>
                     
@@ -163,7 +163,7 @@
                             <img *ngFor="let path of VIDEO_PATH" [src]="path" alt="Girl in a jacket">
                         </div>
                         <button class="close-modal" (click)="showModalVideo=false">Close</button>
-                    </div> -->
+                    </div>
                     <!-- modal end -->
 
                     <app-image-rate-scale [bmxItem]="bmxItem" [i]="i"
@@ -188,17 +188,14 @@
                         </mat-icon>
                     </button>
                     <!-- modal -->
-                    <div *ngIf="showModalVideo" id="myModal" class="modal-video" style="display: flex;flex-direction: column;gap: 2px;">
-                                             <mat-checkbox #modalChecked (click)="saveSelection()" class="example-margin container-checkbox" >Don't show again</mat-checkbox>
+                    <div *ngIf="showModalVideo" id="myModal" class="modal-video" CV
+                    style="display: flex;flex-direction: column;gap: 6px;">
+                        <mat-checkbox (click)="saveSelection()" class="example-margin container-checkbox" >Don't show again</mat-checkbox>
                     
-                        <div class="modal-content" style="height: auto">
-                            <mat-tab-group *ngIf="!isDesktopDevice; else modalNormal" style="background-color: white" >
-                                <mat-tab label="Instrucciones"> <div [innerHTML]="tinderInstruction | safe: 'html'" style=" padding: 15px"></div></mat-tab>
-                                <mat-tab label="Tutorial"> <img *ngFor="let path of VIDEO_PATH" [src]="path" alt="tutorial" style="width: 100%"> </mat-tab>
-                            </mat-tab-group>
-                            <ng-template #modalNormal><img *ngFor="let path of VIDEO_PATH" [src]="path" alt="tutorial"></ng-template>
+                        <div class="modal-content">
+                            <img *ngFor="let path of VIDEO_PATH" [src]="path" alt="Girl in a jacket">
                         </div>
-                        <button class="btn btn-raised close-modal" (click)="showModalVideo=false">close</button>
+                        <button class="close-modal" (click)="showModalVideo=false">Close</button>
                     </div>
                     <!-- modal end -->
                     <div class="emoji-handle">.</div>
