--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/tinder/tinder.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/tinder/tinder.component.html
@@ -42,14 +42,13 @@
             matTooltipPosition="above" mat-icon-button aria-label="ranking">
             <mat-icon style="font-size: 26px;    z-index: 9;" class="full-icon">swap_horizontal_circle</mat-icon>
         </button> -->
-
+        <button (click)="showCreationModalVideo=true; editSingleTableCells = false" class="add-column"
+            matTooltip="see tutorial" matTooltipPosition="above" mat-icon-button aria-label="ranking">
+            <mat-icon style="font-size: 26px;" class="full-icon">video_library</mat-icon>
+        </button>
         <button (click)="showModalTable = true" class="add-column" matTooltip="Update names" matTooltipPosition="above"
             *ngIf="i !== selectedIndex" mat-icon-button>
             <mat-icon style="font-size: 25px;" class="full-icon"> text_fields</mat-icon>
-        </button>
-        <button (click)="showCreationModalVideo=true; editSingleTableCells = false" class="add-column" matTooltip="see tutorial"
-            matTooltipPosition="above" mat-icon-button aria-label="ranking">
-            <mat-icon style="font-size: 26px;" class="full-icon">video_library</mat-icon>
         </button>
         <button (click)="selectedIndex = i" class="add-column" matTooltip="insert test names" matTooltipPosition="above"
             *ngIf="i !== selectedIndex" mat-icon-button>
@@ -108,16 +107,6 @@
             aria-label="ranking">
             <mat-icon>cancel</mat-icon><br>Cancel
         </button>
-        <div>
-            <div style="font-size: 16px;margin-top: 10px;color: #48535e;">SELECT RATING RANGE</div>
-            <br>
-            <div style="text-align: center;display: flex;flex-direction: row;justify-content: space-around;">
-                {{numRatingScale}}
-                <input [(ngModel)]="rankingScaleValue" type="range" id="volume" name="volume" min="3" max="10">
-                10 <br>
-            </div>
-            <label for="volume">{{rankingScaleValue}}</label>
-        </div>
 
         <button style="outline: none;color:#76d354;margin-bottom: 50px;" mat-icon-button
             (click)="selectedIndex = '';upLoadNamesAndRationales(testNamesInput)" aria-label="ranking">
@@ -194,7 +183,7 @@
                 <!-- RANKING SYSTEM -->
                 <div *ngIf="ranking"
                     style="display: flex;flex-direction:row;justify-content: center;align-items: center;gap: 35px;">
-                    <div *ngFor="let rank of rankingAmountArr; let rankIndex = index">
+                    <div *ngFor="let rank of rankingAmount; let rankIndex = index">
                         <button style="min-width: 35px;" (click)="voteName(rank)"
                             [ngClass]="(currentrank === rankIndex)?'rankNumberActive':'rankNumber'" mat-raised-button>
                             {{rank}}
@@ -320,7 +309,7 @@
                         </ng-template>
                     </div>
                     <div style="display: flex; gap: 5px">
-                        <div *ngFor="let rank of rankingAmountArr; let rankIndex = index">
+                        <div *ngFor="let rank of rankingAmount; let rankIndex = index">
                             <button style="min-width: 35px;" (click)="voteName(rank)"
                                 [ngClass]="(currentrank === rankIndex)?'rankNumberActive':'rankNumber'"
                                 mat-raised-button>
