--- a/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.html
+++ b/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.html
@@ -188,7 +188,7 @@
                         </mat-icon>
                     </button>
                     <!-- modal -->
-                    <div *ngIf="showModalVideo" id="myModal" class="modal-video" CV
+                    <!-- <div *ngIf="showModalVideo" id="myModal" class="modal-video" CV
                     style="display: flex;flex-direction: column;gap: 6px;">
                         <mat-checkbox (click)="saveSelection()" class="example-margin container-checkbox" >Don't show again</mat-checkbox>
                     
@@ -196,7 +196,7 @@
                             <img *ngFor="let path of VIDEO_PATH" [src]="path" alt="Girl in a jacket">
                         </div>
                         <button class="close-modal" (click)="showModalVideo=false">Close</button>
-                    </div>
+                    </div> -->
                     <!-- modal end -->
                     <div class="emoji-handle">.</div>
                     <div style="position: absolute;right: 0px;">
